--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'airflow-ga4/**'
       - 'airflow-uplus/**'
+      - 'airflow-continuous-training/**'
 
 jobs:
   detect-changes:
@@ -22,7 +23,7 @@ jobs:
       id: set-matrix
       run: |
         CHANGED_DIRS=()
-        for path in "airflow-ga4" "airflow-uplus"; do
+        for path in "airflow-ga4" "airflow-uplus" "airflow-continuous-training"; do
           if git diff --name-only HEAD^ HEAD | grep -qE "^$path/"; then
             CHANGED_DIRS+=("$path")
           fi
