:sparkles: Feat: Discord Webhook

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,3 +54,9 @@ jobs:
         context: ${{ matrix.directory }}
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}:latest
+
+    - name: Notify Discord
+      run: |
+        curl -X POST -H "Content-Type: application/json" -d '{
+          "content": ":tada: GitHub Actions: Build ${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}:latest Completed."
+        }' ${{ secrets.DISCORD_WEBHOOK_URL }}
