--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,9 +5,9 @@ on:
     branches:
       - main
     paths:
-      - 'airflow-ga4/**'
-      - 'airflow-uplus/**'
-      - 'airflow-continuous-training/**'
+      - "airflow-ga4/**"
+      - "airflow-uplus/**"
+      - "airflow-continuous-training/**"
 
 jobs:
   detect-changes:
@@ -15,20 +15,20 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-    - name: Check out code
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-    - name: Detect changed directories
-      id: set-matrix
-      run: |
-        CHANGED_DIRS=()
-        for path in "airflow-ga4" "airflow-uplus" "airflow-continuous-training"; do
-          if git diff --name-only HEAD^ HEAD | grep -qE "^$path/"; then
-            CHANGED_DIRS+=("$path")
-          fi
-        done
-        echo "matrix=$(echo ${CHANGED_DIRS[@]} | jq -Rc 'split(" ")')" >> $GITHUB_OUTPUT
+      - name: Check out code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Detect changed directories
+        id: set-matrix
+        run: |
+          CHANGED_DIRS=()
+          for path in "airflow-ga4" "airflow-uplus" "airflow-continuous-training"; do
+            if git diff --name-only HEAD^ HEAD | grep -qE "^$path/"; then
+              CHANGED_DIRS+=("$path")
+            fi
+          done
+          echo "matrix=$(echo ${CHANGED_DIRS[@]} | jq -Rc 'split(" ")')" >> $GITHUB_OUTPUT
 
   build:
     needs: detect-changes
@@ -39,24 +39,24 @@ jobs:
       matrix:
         directory: ${{fromJson(needs.detect-changes.outputs.matrix)}}
     steps:
-    - name: Check out code again
-      uses: actions/checkout@v3
+      - name: Check out code again
+        uses: actions/checkout@v3
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v3
-      with:
-        context: ${{ matrix.directory }}
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: ${{ matrix.directory }}
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}:latest
 
-    - name: Notify Discord
-      run: |
-        curl -X POST -H "Content-Type: application/json" -d '{
-          "content": ":tada: [GitHub Actions] Build ${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}:latest Completed."
-        }' ${{ secrets.DISCORD_WEBHOOK_URL }}
+      - name: Notify Discord
+        run: |
+          curl -X POST -H "Content-Type: application/json" -d '{
+            "content": ":tada: [GitHub Actions] Build [${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}:latest](https://hub.docker.com/repository/docker/${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}/general) Completed."
+          }' ${{ secrets.DISCORD_WEBHOOK_URL }}
