:memo: Fix: Dockerfile

--- a/airflow-uplus/Dockerfile
+++ b/airflow-uplus/Dockerfile
@@ -5,11 +5,10 @@ RUN apt-get update \
     && apt-get install -y python3 python3-pip
 
 RUN pip install requests
+RUN pip install selenium
 
 COPY main.py /app/main.py
 
 WORKDIR /app
-
-RUN pip3 install selenium
 
 CMD ["python3", "main.py"]
