--- a/airflow-ga4/Dockerfile
+++ b/airflow-ga4/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /app
 COPY main.py .
 COPY requirements.txt .
 
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["python", "main.py"]
+CMD ["python3", "main.py"]
