--- a/airflow-stock/Dockerfile
+++ b/airflow-stock/Dockerfile
@@ -8,6 +8,6 @@ WORKDIR /app
 COPY main.py .
 COPY requirements.txt .
 
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 CMD ["python3", "main.py"]
