--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - "airflow-*/**"
+      - "dev/**"
 
 jobs:
   detect-changes:
@@ -13,15 +14,16 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-      - name: Check out code
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Detect changed directories
         id: set-matrix
         run: |
           CHANGED_DIRS=()
-          for path in airflow-*; do
+          for path in airflow-* dev; do
             if git diff --name-only HEAD^ HEAD | grep -qE "^$path/"; then
               CHANGED_DIRS+=("$path")
             fi
@@ -31,36 +33,60 @@ jobs:
   build:
     needs: detect-changes
     if: needs.detect-changes.outputs.matrix != '[]'
-    name: Build and Push Docker Image for ${{ matrix.directory }}
+    name: ${{ matrix.directory }} (build & push)
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        directory: ${{fromJson(needs.detect-changes.outputs.matrix)}}
+        directory: ${{ fromJson(needs.detect-changes.outputs.matrix) }}
     steps:
-      - name: Check out code again
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Determine new tag
+        id: new-tag
+        run: |
+          apiResponse=$(curl -s "https://hub.docker.com/v2/repositories/${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}/tags/?page_size=100")
+          if echo "$apiResponse" | grep -q "httperror 404"; then
+            newTag="v1.0.0"
+          else
+            currentTag=$(echo "$apiResponse" | jq -r '.results[].name' | sort -V | grep v | tail -n 1)
+            version=$(echo "$currentTag" | sed 's/[^0-9.]//g')
+            IFS='.' read -r major minor patch <<< "$version"
+            newTag="v${major}.${minor}.$((patch + 1))"
+          fi
+          echo "new_tag=$newTag" >> $GITHUB_ENV
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
+      - name: Login to GitHub
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GH_USERNAME }}
+          password: ${{ secrets.GH_TOKEN }}
+
+      - name: Build and push image
+        uses: docker/build-push-action@v6
         with:
           context: ${{ matrix.directory }}
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}:latest
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}:latest,
+            ${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}:${{ env.new_tag }},
+            ghcr.io/${{ secrets.GH_USERNAME }}/${{ matrix.directory }}:latest,
+            ghcr.io/${{ secrets.GH_USERNAME }}/${{ matrix.directory }}:${{ env.new_tag }}
 
-      - name: Notify Slack
-        run: |
-          curl -X POST https://slack.com/api/chat.postMessage \
-          -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" \
-          -H "Content-type: application/json" \
-          -d '{
-                  "channel": "zerohertz",
-                  "text": ":tada: [GitHub Actions] Build <https://hub.docker.com/repository/docker/${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}/general|${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}:latest> Completed.",
-                  "username": "GitHub",
-                  "icon_url": "https://github-production-user-asset-6210df.s3.amazonaws.com/42334717/286302856-85c52548-7217-4412-a5cb-a066f588fc13.png",
-              }'
+      - name: Slack webhook
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          author_name: zerohertzLib
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
+          if_mention: failure,cancelled
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_CHECK }}
+        if: always()
