:fire: Update: zerohertzLib

--- a/airflow-ga4/Dockerfile
+++ b/airflow-ga4/Dockerfile
@@ -1,5 +1,9 @@
 FROM python:3.11
 
+LABEL maintainer="Zerohertz <ohg3417@gmail.com>"
+LABEL description="Airflow: Google Analytics 4"
+LABEL license="MIT"
+
 WORKDIR /app
 COPY main.py .
 COPY requirements.txt .
