--- a/airflow-stock-time/Dockerfile
+++ b/airflow-stock-time/Dockerfile
@@ -1,8 +1,12 @@
 FROM python:3.11
 
+LABEL maintainer="Zerohertz <ohg3417@gmail.com>"
+LABEL description="Airflow: Stock Time"
+LABEL license="MIT"
+
 WORKDIR /app
 COPY main.py .
 
-RUN pip install --no-cache-dir zerohertzLib[quant]==1.1.3
+RUN pip install --no-cache-dir zerohertzLib[quant]==1.1.4
 
 CMD ["python3", "main.py"]
