--- a/airflow-stock-v3/Dockerfile
+++ b/airflow-stock-v3/Dockerfile
@@ -1,10 +1,14 @@
 FROM python:3.11
 
+LABEL maintainer="Zerohertz <ohg3417@gmail.com>"
+LABEL description="Airflow: Stock v3"
+LABEL license="MIT"
+
 WORKDIR /app
 COPY main.py .
 
 RUN pip install --no-cache-dir \
     pytz \
-    zerohertzLib[quant]==1.1.3
+    zerohertzLib[quant]==1.1.4
 
 CMD ["python3", "main.py"]
