--- a/airflow-uplus/Dockerfile
+++ b/airflow-uplus/Dockerfile
@@ -1,10 +1,14 @@
 FROM selenium/standalone-chrome
 
+LABEL maintainer="Zerohertz <ohg3417@gmail.com>"
+LABEL description="Airflow: U+"
+LABEL license="MIT"
+
 USER root
 RUN apt-get update \
     && apt-get install -y python3 python3-pip
 
-RUN pip install zerohertzLib[api]==1.1.3
+RUN pip install zerohertzLib[api]==1.1.4
 RUN pip install selenium
 
 COPY main.py /app/main.py
