--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,7 +80,7 @@ jobs:
         with:
           context: ${{ matrix.directory }}
           push: true
-          platforms: linux/amd64,linux/arm64
+          # platforms: linux/amd64,linux/arm64
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}:latest,
             ${{ secrets.DOCKER_USERNAME }}/${{ matrix.directory }}:${{ env.new_tag }},
