:sparkles: feat: gpu

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,7 @@ on:
     paths:
       - "airflow-*/**"
       - "dev/**"
+      - "gpu/**"
 
 jobs:
   detect-changes:
@@ -23,7 +24,7 @@ jobs:
         id: set-matrix
         run: |
           CHANGED_DIRS=()
-          for path in airflow-* dev; do
+          for path in airflow-* dev gpu; do
             if git diff --name-only HEAD^ HEAD | grep -qE "^$path/"; then
               CHANGED_DIRS+=("$path")
             fi
@@ -69,11 +70,11 @@ jobs:
           username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.GH_TOKEN }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
 
       - name: Build and push image
         uses: docker/build-push-action@v6
