--- a/gpu/Dockerfile
+++ b/gpu/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/* && apt-get update && \
     update-locale LANG=en_US.UTF-8 LANGUAGE=en_US.UTF-8 LC_ALL=en_US.UTF-8 && \
     echo "Asia/Seoul" > /etc/timezone && \
     ln -sf /usr/share/zoneinfo/Asia/Seoul /etc/localtime && \
+    ln -s /usr/bin/batcat /usr/bin/bat && \
     dpkg-reconfigure --frontend noninteractive tzdata
 
 # ----------------------- C++ ----------------------- #
@@ -22,6 +23,13 @@ RUN apt-get install -y golang
 
 # ----------------------- Java ----------------------- #
 # RUN apt-get install -y openjdk-17-jdk openjdk-21-jdk
+
+# ----------------------- Node ----------------------- #
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.3/install.sh | bash && \
+    export NVM_DIR="$HOME/.nvm" && \
+    [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && \
+    nvm install 24 && \
+    npm install -g neovim tree-sitter-cli
 
 # ----------------------- Python ----------------------- #
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
@@ -42,20 +50,13 @@ RUN wget -O- https://apt.releases.hashicorp.com/gpg | \
     apt-get update && \
     apt-get install -y packer terraform
 
-# ----------------------- Local Test ----------------------- #
-# RUN sed -i 's|archive.ubuntu.com|kakao.mirror.com|g' /etc/apt/sources.list.d/ubuntu.sources && \
-#     sed -i 's|security.ubuntu.com|kakao.mirror.com|g' /etc/apt/sources.list.d/ubuntu.sources && \
-#     apt-get update
-
 # ----------------------- Neovim ----------------------- #
 COPY mason.sh /root/mason.sh
 RUN wget https://github.com/neovim/neovim/releases/download/stable/nvim-linux-x86_64.tar.gz && \
     tar -xzf nvim-linux-x86_64.tar.gz && \
     cp -r nvim-linux-x86_64/* /usr/local/ && \
     rm nvim-linux-x86_64.tar.gz && rm -rf nvim-linux-x86_64 && \
-    curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
-    apt-get install -y ripgrep fd-find fzf fish luarocks nodejs && \
-    npm install -g neovim tree-sitter-cli && \
+    apt-get install -y ripgrep fd-find fzf fish luarocks && \
     chmod +x /root/mason.sh
 
 # ----------------------- Lazygit ----------------------- #
@@ -63,6 +64,11 @@ RUN LAZYGIT_VERSION=$(curl -s "https://api.github.com/repos/jesseduffield/lazygi
     curl -Lo lazygit.tar.gz "https://github.com/jesseduffield/lazygit/releases/latest/download/lazygit_${LAZYGIT_VERSION}_Linux_x86_64.tar.gz" && \
     tar xf lazygit.tar.gz lazygit && \
     install lazygit /usr/local/bin && rm lazygit*
+
+# ----------------------- Local Test ----------------------- #
+# RUN sed -i 's|archive.ubuntu.com|kakao.mirror.com|g' /etc/apt/sources.list.d/ubuntu.sources && \
+#     sed -i 's|security.ubuntu.com|kakao.mirror.com|g' /etc/apt/sources.list.d/ubuntu.sources && \
+#     apt-get update
 
 # ----------------------- ZSH ----------------------- #
 RUN apt-get install zsh -y && \
@@ -93,6 +99,8 @@ RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
 # ----------------------- Neovim ----------------------- #
 RUN . /opt/venv/main/bin/activate && \
     pip install --no-cache-dir neovim isort black pylatexenc && \
+    export NVM_DIR="$HOME/.nvm" && \
+    [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && \
     zsh -c "source $HOME/.zshrc && \
     nvim --headless +qa && \
     $HOME/mason.sh && rm $HOME/mason.sh && \
@@ -110,3 +118,4 @@ RUN . /opt/venv/main/bin/activate && \
 
 WORKDIR /workspace
 ENTRYPOINT [ "zsh", "-c" ]
+CMD [ "tail -f /dev/null" ]
