--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,7 @@ on:
     paths:
       - "airflow-*/**"
       - "dev/**"
+      - "gpu/**"
 
 jobs:
   detect-changes:
@@ -23,7 +24,7 @@ jobs:
         id: set-matrix
         run: |
           CHANGED_DIRS=()
-          for path in airflow-* dev; do
+          for path in airflow-* dev gpu; do
             if git diff --name-only HEAD^ HEAD | grep -qE "^$path/"; then
               CHANGED_DIRS+=("$path")
             fi
