--- a/gpu/Dockerfile
+++ b/gpu/Dockerfile
@@ -36,7 +36,7 @@ COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
 COPY --from=ghcr.io/astral-sh/uv:latest /uvx /bin/uvx
 # curl -LsSf https://astral.sh/uv/install.sh | sh && \
 #     source $HOME/.local/bin/env && \
-ENV ENV PATH="/opt/venv/main/bin:$PATH" \
+ENV PATH="/opt/venv/main/bin:$PATH" \
     UV_PYTHON_INSTALL_DIR=/opt/venv \
     UV_TORCH_BACKEND=auto
 RUN uv python install 3.12 && \
@@ -99,7 +99,7 @@ RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
 #     $HOME/miniconda/bin/conda init zsh
 
 # ----------------------- Neovim ----------------------- #
-RUN pip install --no-cache-dir neovim isort black pylatexenc && \
+RUN uv pip install --no-cache-dir neovim isort black pylatexenc && \
     export NVM_DIR="$HOME/.nvm" && \
     [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && \
     zsh -c "source $HOME/.zshrc && \
